Webpage fix: visitorCount on resume.html.

--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -85,11 +85,13 @@
   </main>
 
   <footer class="shell footer">
-    <small>
-      Built with AWS SAM, CloudFront/S3, API Gateway/Lambda/DynamoDB, and GitHub Actions.
-      <span class="dot">•</span>
-      <a class="footer-link" href="Reuben Mulholland Resume 2025.pdf" target="_blank" rel="noopener">Resume PDF</a>
-    </small>
+    <p>
+      🚀 Interested in working together? 
+      Connect with me on 
+      <a href="https://www.linkedin.com/in/reubenmulholland" target="_blank">LinkedIn</a> 
+      or explore more on 
+      <a href="https://github.com/zReuben" target="_blank">GitHub</a>.
+    </p>
   </footer>
 
   <!-- Spotlight JS (same as home) -->
@@ -112,5 +114,6 @@
       }
     })();
   </script>
+  <script src="visitorCount.js?v=10"></script>
 </body>
 </html>
