--- a/resume-site/blog.html
+++ b/resume-site/blog.html
@@ -12,6 +12,18 @@
   <div id="spotlight" aria-hidden="true"></div>
 
   <header class="shell">
+    <div class="intro">
+      <img src="profile.jpg" alt="Reuben Mulholland" class="avatar" />
+      <div>
+        <h1 class="headline">Reuben Mulholland</h1>
+        <p class="roles">
+          <span class="roles-cert">AWS Certified Solutions Architect – Associate (AWS SAA)</span><br>
+          <span class="roles-sub">Bridging technical depth and product leadership</span><br>
+          <span class="roles-looking">Cloud Engineering · DevOps · Solutions Architecture · Technical Product Management</span>
+        </p>
+        <p class="visitors">Visitors: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></p>
+      </div>
+    </div>
     <nav class="topnav" aria-label="Primary">
       <a href="index.html" class="home-link" title="Home">
         <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn"><path d="M12 3.172 3 10v10a1 1 0 0 0 1 1h5v-6h6v6h5a1 1 0 0 0 1-1V10l-9-6.828zM12 1l11 8v11a3 3 0 0 1-3 3h-7v-6H11v6H4a3 3 0 0 1-3-3V9L12 1z"/></svg>
