--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -27,8 +27,8 @@
         <h1 class="headline">Reuben Mulholland</h1>
         <p class="roles">
           <span class="roles-cert">AWS Certified Solutions Architect – Associate (AWS SAA)</span><br>
-          <span class="roles-sub">Experienced: Product Line Manager &nbsp;|&nbsp; Product Owner &nbsp;|&nbsp; Applications Engineer</span><br>
-          <span class="roles-looking">Looking for: Cloud Engineer &nbsp;|&nbsp; DevOps &nbsp;|&nbsp; Solutions Architect</span>
+          <span class="roles-sub">Bridging technical depth and product leadership</span><br>
+          <span class="roles-looking">Cloud Engineering · DevOps · Solutions Architecture · Technical Product Management</span>
         </p>
         <p class="visitors">Visitors: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></p>
       </div>
