--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -26,11 +26,10 @@
       <div>
         <h1 class="headline">Reuben Mulholland</h1>
         <p class="roles">
-          <span class="roles-cert">AWS Certified Solutions Architect – Associate (AWS SAA)</span><br>
-          <span class="roles-sub">Bridging technical depth and product leadership</span><br>
-          <span class="roles-looking">Cloud Engineering · DevOps · Solutions Architecture · Technical Product Management</span>
+          <span class="roles-cert">AWS Certified Solutions Architect - Associate (SAA)</span><br>
+          <span class="roles-sub">Focused on Cloud Engineering, DevOps, and Solutions Architecture</span><br>
+          <span class="roles-looking">Bridging technical execution with product leadership</span>
         </p>
-        <p class="visitors">Visitors: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></p>
       </div>
     </div>
 
