Blog link adjustments, merge impact/metrics into projects.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -102,53 +102,38 @@
       <h4 class="subkicker">Completed</h4>
       <div class="cards">
         <!-- Cloud Resume Challenge -->
-        <article class="card">
-          <h4>
-            <a href="post-crc.html" class="project-link"> 
-              Cloud Resume Challenge
-            </a>
-          </h4>
-          <div class="badges">
-            <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
-            <span class="badge">CloudFront</span><span class="badge">S3</span><span class="badge">DNS</span>
-            <span class="badge">Route 53</span><span class="badge">ACM</span>
-            <span class="badge">API Gateway</span><span class="badge">Lambda</span><span class="badge">Python</span>
-            <span class="badge">boto3</span><span class="badge">DynamoDB</span><span class="badge">Database</span>
-            <span class="badge">SAM</span><span class="badge">CloudFormation</span><span class="badge">YAML</span>
-            <span class="badge">PyTest</span><span class="badge">Unit Tests</span>
-            <span class="badge">Integration Tests</span><span class="badge">E2E Tests</span>
-          </div>
-        </article>
-
-        <!-- Multi-Account + CI/CD -->
-        <article class="card">
-          <h4>
-            <a href="post-multi-account.html" class="project-link"> 
-              Multi-Account + CI/CD Promotoin
-            </a>
-          </h4>
-          <div class="badges">
-            <span class="badge">AWS Organizations</span><span class="badge">MFA</span>
-            <span class="badge">GitHub Actions</span><span class="badge">OIDC</span>
-            <span class="badge">Environments</span><span class="badge">Approvals</span>
-            <span class="badge">SAM</span><span class="badge">S3 Artifacts</span><span class="badge">Checksums</span>
-            <span class="badge">SSM Parameter Store</span><span class="badge">Systems Manager</span>
-            <span class="badge">IaC</span><span class="badge">YAML</span>
-            <span class="badge">Shell Scripts</span>
-          </div>
-        </article>
-      </div>
-
-      <div class="cards metrics-row">
-        <article class="card">
-          <h4>Impact &amp; Metrics</h4>
-          <div class="metrics-grid">
-            <div class="metric"><span class="num">0</span><span class="label">manual console changes — 100% IaC</span></div>
-            <div class="metric"><span class="num">10–15 min</span><span class="label">idea → deploy loop via CI/CD</span></div>
-            <div class="metric"><span class="num">0</span><span class="label">long-lived AWS keys (OIDC only)</span></div>
-            <div class="metric"><span class="num">Same artifact</span><span class="label">promoted ENG → TEST → PROD</span></div>
-          </div>
-        </article>
+        <a href="post-crc.html" class="project-link"> 
+          <article class="card">
+            <h4>Cloud Resume Challenge</h4>
+            <div class="badges">
+              <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
+              <span class="badge">CloudFront</span><span class="badge">S3</span><span class="badge">DNS</span>
+              <span class="badge">Route 53</span><span class="badge">ACM</span>
+              <span class="badge">API Gateway</span><span class="badge">Lambda</span><span class="badge">Python</span>
+              <span class="badge">boto3</span><span class="badge">DynamoDB</span><span class="badge">Database</span>
+              <span class="badge">SAM</span><span class="badge">CloudFormation</span><span class="badge">YAML</span>
+              <span class="badge">PyTest</span><span class="badge">Unit Tests</span>
+              <span class="badge">Integration Tests</span><span class="badge">E2E Tests</span>
+              <span class="badge">100% IaC</span>
+            </div>
+          </article>
+        </a>
+          <!-- Multi-Account + CI/CD -->
+        <a href="post-multi-account.html" class="project-link"> 
+          <article class="card">
+            <h4>Multi-Account + CI/CD Promotion</h4>
+            <div class="badges">
+              <span class="badge">AWS Organizations</span><span class="badge">MFA</span>
+              <span class="badge">GitHub Actions</span><span class="badge">Same artifact pomoted ENG → TEST → PROD</span>
+              <span class="badge">Environments</span><span class="badge">Approvals</span>
+              <span class="badge">SAM</span><span class="badge">S3 Artifacts</span><span class="badge">Checksums</span>
+              <span class="badge">SSM Parameter Store</span><span class="badge">Systems Manager</span>
+              <span class="badge">IaC</span><span class="badge">YAML</span>
+              <span class="badge">Shell Scripts</span><span class="badge">10-15 min deploy loop via CI/CD</span>
+              <span class="badge">0 long-lived AWS keys (OIDC only)</span><span class="badge">10-15 min idea -> deploy loop via CI/CD</span>
+            </div>
+          </article>
+        </a>
       </div>
 
       <h4 class="subkicker">Currently Learning</h4>
