--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -53,14 +53,14 @@
         <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn">
           <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zm1 7h5l-5-5v5zM8 13h8v2H8v-2zm0 4h8v2H8v-2z"/>
         </svg>
-        <span>Resume</span>
+        <span>View Resume</span>
       </a>
       <a href="blog.html">
         <!-- Blog icon (notebook) -->
         <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn">
           <path d="M6 2h11a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H6a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3zm0 2a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h1V4H6zm3 0v16h8V4H9zm2 3h4v2h-4V7zm0 4h4v2h-4v-2zm0 4h3v2h-3v-2z"/>
         </svg>
-        <span>Blog</span>
+        <span>Read Blog</span>
       </a>
       <a href="https://github.com/zReuben" target="_blank" rel="noopener noreferrer">
         <!-- GitHub mark -->
@@ -83,8 +83,15 @@
     <section class="section">
       <h3 class="kicker">About Me</h3>
       <p>
-        AWS-certified cloud builder with a background in engineering and product leadership. Experienced in IaC, CI/CD pipelines, and multi-account AWS architectures. Blend hands-on execution with product ownership, ensuring systems are robust, secure, and aligned to business goals.
+        Cloud builder with a background in engineering and product leadership. Experienced in IaC, CI/CD pipelines, and multi-account AWS architectures. Blend hands-on execution with product ownership, ensuring systems are robust, secure, and aligned to business goals.
       </p>
+      <p>
+      🚀 Interested in working together? 
+      Connect with me on 
+      <a href="https://www.linkedin.com/in/reubenmulholland" target="_blank">LinkedIn</a> 
+      or explore more on 
+      <a href="https://github.com/zReuben" target="_blank">GitHub</a>.
+    </p>
     </section>
 
     <section class="section">
@@ -101,7 +108,7 @@
               <span class="badge">CloudFront</span><span class="badge">S3</span><span class="badge">DNS</span>
               <span class="badge">Route 53</span><span class="badge">ACM</span>
               <span class="badge">API Gateway</span><span class="badge">Lambda</span><span class="badge">Python</span>
-              <span class="badge">boto3</span><span class="badge">DynamoDB Database</span>
+              <span class="badge">boto3</span><span class="badge">DynamoDB</span>
               <span class="badge">SAM</span><span class="badge">CloudFormation</span><span class="badge">YAML</span>
               <span class="badge">PyTest</span><span class="badge">Unit Tests</span>
               <span class="badge">Integration Tests</span><span class="badge">E2E Tests</span>
@@ -121,7 +128,7 @@
               <span class="badge">SSM Parameter Store</span><span class="badge">Systems Manager</span>
               <span class="badge">IaC</span><span class="badge">YAML</span>
               <span class="badge">Shell Scripts</span><span class="badge">10-15 min Deploy Loop</span>
-              <span class="badge">0 long-lived AWS keys</span><span class="badge">OIDC</span>
+              <span class="badge">OIDC - no long-lived keys</span><span class="badge">OIDC</span>
             </div>
           </article>
         </a>
@@ -192,16 +199,6 @@
       }
     })();
   </script>
-
   <script src="visitorCount.js?v=10"></script>
-  <footer class="shell footer">
-    <p>
-      🚀 Interested in working together? 
-      Connect with me on 
-      <a href="https://www.linkedin.com/in/reubenmulholland" target="_blank">LinkedIn</a> 
-      or explore more on 
-      <a href="https://github.com/zReuben" target="_blank">GitHub</a>.
-    </p>
-  </footer>
 </body>
 </html>
