Minor missed update.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -87,11 +87,13 @@
       </p>
       <p>
       🚀 Interested in working together? 
-      Connect with me on 
+      Connect with me on LinkedIn or explore more on GitHub!
+      <!--
       <a href="https://www.linkedin.com/in/reubenmulholland" target="_blank">LinkedIn</a> 
       or explore more on 
       <a href="https://github.com/zReuben" target="_blank">GitHub</a>.
-    </p>
+      -->
+      </p>
     </section>
 
     <section class="section">
