Fix CTA, adjust badges, add styling for CFA.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -86,13 +86,10 @@
         Cloud builder with a background in engineering and product leadership. Experienced in IaC, CI/CD pipelines, and multi-account AWS architectures. Blend hands-on execution with product ownership, ensuring systems are robust, secure, and aligned to business goals.
       </p>
       <p>
-      🚀 Interested in working together? 
-      Connect with me on LinkedIn or explore more on GitHub!
-      <!--
+      Interested in working together? Connect with me on
       <a href="https://www.linkedin.com/in/reubenmulholland" target="_blank">LinkedIn</a> 
       or explore more on 
       <a href="https://github.com/zReuben" target="_blank">GitHub</a>.
-      -->
       </p>
     </section>
 
@@ -125,12 +122,12 @@
             <div class="badges">
               <span class="badge">AWS Organizations</span><span class="badge">MFA</span>
               <span class="badge">GitHub Actions</span><span class="badge">Immutable Artifact Promotion</span>
-              <span class="badge">Environments</span><span class="badge">Approvals</span>
+              <span class="badge">Multi-Environment</span><span class="badge">Approvals</span>
               <span class="badge">SAM</span><span class="badge">S3 Artifacts</span><span class="badge">Checksums</span>
               <span class="badge">SSM Parameter Store</span><span class="badge">Systems Manager</span>
               <span class="badge">IaC</span><span class="badge">YAML</span>
               <span class="badge">Shell Scripts</span><span class="badge">10-15 min Deploy Loop</span>
-              <span class="badge">OIDC - no long-lived keys</span><span class="badge">OIDC</span>
+              <span class="badge">OIDC - no long-lived keys</span>
             </div>
           </article>
         </a>
