CTA Hyperlink adj.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -87,9 +87,9 @@
       </p>
       <p>
       Interested in working together? Connect with me on
-      <a href="https://www.linkedin.com/in/reubenmulholland" target="_blank">LinkedIn</a> 
-      or explore more on 
-      <a href="https://github.com/zReuben" target="_blank">GitHub</a>.
+        <a href="https://www.linkedin.com/in/reubenmulholland" target="_blank" rel="noopener">LinkedIn</a> 
+        or explore more on 
+        <a href="https://github.com/zReuben" target="_blank" rel="noopener">GitHub</a>.
       </p>
     </section>
 
