--- a/resume-site/post-crc.html
+++ b/resume-site/post-crc.html
@@ -1,48 +1,111 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Cloud Resume Challenge — Deep Dive</title>
-  <meta name="description" content="My CRC implementation: static site on CloudFront/S3, API Gateway → Lambda (Python) → DynamoDB, IaC with SAM."/>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Cloud Resume Challenge • Deep Dive</title>
+  <meta name="description" content="A deep dive into my Cloud Resume Challenge implementation: static website, serverless backend, IaC, CI/CD, and beyond." />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="spotlight" aria-hidden="true"></div>
-
-  <header class="shell">
-    <nav class="topnav" aria-label="Primary">
-      <a href="index.html" class="home-link" title="Home">
-        <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn"><path d="M12 3.172 3 10v10a1 1 0 0 0 1 1h5v-6h6v6h5a1 1 0 0 0 1-1V10l-9-6.828zM12 1l11 8v11a3 3 0 0 1-3 3h-7v-6H11v6H4a3 3 0 0 1-3-3V9L12 1z"/></svg>
-        <span>Home</span><em class="pill">API demo</em>
-      </a>
-      <a href="resume.html"><svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zm1 7h5l-5-5v5zM8 13h8v2H8v-2zm0 4h8v2H8v-2z"/></svg><span>Resume</span></a>
-      <a href="blog.html"><svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn"><path d="M6 2h11a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H6a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3zm0 2a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h1V4H6zm3 0v16h8V4H9zm2 3h4v2h-4V7zm0 4h4v2h-4v-2zm0 4h3v2h-3v-2z"/></svg><span>Blog</span></a>
-      <a href="https://github.com/zReuben" target="_blank" rel="noopener"><svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn"><path d="M12 .5a11.5 11.5 0 0 0-3.64 22.42c.58.11.79-.25.79-.55v-2.06c-3.19.7-3.86-1.37-3.86-1.37-.53-1.35-1.3-1.71-1.3-1.71-1.06-.72.08-.71.08-.71 1.17.08 1.78 1.2 1.78 1.2 1.04 1.78 2.72 1.26 3.39.96.11-.76.41-1.26.74-1.55-2.55-.29-5.24-1.28-5.24-5.7 0-1.26.45-2.29 1.19-3.1-.12-.29-.52-1.46.11-3.05 0 0 .97-.31 3.18 1.18.92-.26 1.9-.39 2.88-.4 2.21-1.49 3.18-1.18 3.18-1.18.63 1.59.23 2.76.11 3.05.74.81 1.19 1.84 1.19 3.1 0 4.43-2.7 5.41-5.26 5.7.42.37.8 1.1.8 2.23v3.3c0 .3.21.67.8.55A11.5 11.5 0 0 0 12 .5z"/></svg><span>GitHub</span></a>
-      <a href="https://www.linkedin.com/in/reubenmulholland" target="_blank" rel="noopener"><svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn"><path d="M20.45 20.45h-3.57v-5.6c0-1.34-.02-3.06-1.87-3.06-1.88 0-2.17 1.47-2.17 2.97v5.69H9.28V9.5h3.42v1.49h.05c.48-.9 1.66-1.85 3.42-1.85 3.66 0 4.34 2.41 4.34 5.55v5.76zM5.34 8.01a2.07 2.07 0 1 1 0-4.14 2.07 2.07 0 0 1 0 4.14zM7.12 20.45H3.56V9.5h3.56v10.95z"/></svg><span>LinkedIn</span></a>
+  <header class="container">
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="resume.html">View Resume</a>
+      <a href="blog.html">Read Blogs</a>
+      <a href="https://github.com/zReuben" target="_blank" rel="noopener">GitHub</a>
+      <a href="https://www.linkedin.com/in/reuben-mulholland/" target="_blank" rel="noopener">LinkedIn</a>
     </nav>
+    <h1 class="headline">The Cloud Resume Challenge</h1>
+    <p class="intro">How I built a full-stack, serverless, CI/CD-driven resume site on AWS</p>
   </header>
 
-  <main class="shell">
-    <section class="section">
-      <h3 class="kicker">Cloud Resume Challenge — Deep Dive</h3>
+  <main class="container post">
+    <article>
+      <h2>Intro</h2>
       <p>
-        Built a static website (HTML/CSS/JS) on CloudFront + S3 (HTTPS via ACM) with a visitor counter backed by a
-        RESTful API (API Gateway → Lambda in <strong>Python</strong> using <strong>boto3</strong> → DynamoDB <strong>database</strong>).
-        Custom <strong>DNS</strong> is managed in Route 53. All infrastructure is defined as <strong>IaC</strong> with
-        SAM/CloudFormation (<strong>YAML</strong> templates). 
+        The <a href="https://cloudresumechallenge.dev" target="_blank" rel="noopener">Cloud Resume Challenge</a>
+        is a well-known learning project designed to test cloud fundamentals end-to-end.
+        I used it as my starting point to practice AWS, infrastructure-as-code, CI/CD, and serverless.
+        What began as a static website quickly expanded into a full production-like environment with
+        multi-account separation, automated tests, and a promotion pipeline.
       </p>
-      <p>
-        As part of the challenge, I added full test coverage with <strong>unit</strong>, <strong>integration</strong>, and 
-        <strong>end-to-end</strong> tests in <strong>GitHub Actions</strong> (PyTest for Lambda, plus JavaScript E2E).
-        That experience gave me my first exposure to validating infrastructure and application behavior in an automated pipeline.
-      </p>
-      <p><a class="link-chip" href="blog.html">← Back to Blog</a></p>
-    </section>
+      <p><em>[TEXT PLACEHOLDER: screenshot of live site with counter]</em></p>
+
+      <h2>Front End: Static Website</h2>
+      <ul>
+        <li>HTML, CSS, and JavaScript for layout and styling.</li>
+        <li>Deployed to an S3 bucket and distributed globally via CloudFront.</li>
+        <li>HTTPS enforced with AWS Certificate Manager.</li>
+        <li>Custom domain <code>reubenmulholland.com</code> pointed using Route 53 DNS.</li>
+        <li>Visitor counter on the landing page calls a live API endpoint.</li>
+      </ul>
+      <p><em>[TEXT PLACEHOLDER: snippet of index.html or style.css]</em></p>
+
+      <h2>Back End: Serverless API + Database</h2>
+      <ul>
+        <li>API Gateway exposes RESTful endpoints for the counter.</li>
+        <li>AWS Lambda functions (Python + boto3) handle requests.</li>
+        <li>DynamoDB table stores persistent visitor count.</li>
+        <li>IAM roles scoped to least privilege; no over-permissive access.</li>
+        <li>CORS policies limit API calls to my domain.</li>
+      </ul>
+      <p><em>[TEXT PLACEHOLDER: snippet of Lambda Python code with boto3]</em></p>
+      <p><em>[TEXT PLACEHOLDER: screenshot of DynamoDB table in AWS console]</em></p>
+
+      <h2>Infrastructure as Code</h2>
+      <ul>
+        <li>Infrastructure defined in YAML using AWS SAM (Serverless Application Model).</li>
+        <li>CloudFormation stacks build S3, CloudFront, DynamoDB, API Gateway, and Lambda.</li>
+        <li>No manual console work — fully reproducible deployments.</li>
+        <li>MFA and AWS Vault used locally for secure role assumption.</li>
+      </ul>
+      <p><em>[TEXT PLACEHOLDER: snippet of template.yaml showing DynamoDB + Lambda resource definitions]</em></p>
+
+      <h2>CI/CD Pipeline</h2>
+      <ul>
+        <li>GitHub Actions workflow automates build → test → deploy.</li>
+        <li>Unit tests: Python (PyTest) for Lambda logic.</li>
+        <li>Integration tests: API Gateway + DynamoDB.</li>
+        <li>End-to-end tests: JavaScript checks visitor counter on live site.</li>
+        <li>Full test coverage required before deploy.</li>
+        <li>Artifact built once in ENG, promoted through TEST → PROD with approval and rollback.</li>
+      </ul>
+      <p><em>[TEXT PLACEHOLDER: screenshot of GitHub Actions workflow passing]</em></p>
+      <p><em>[TEXT PLACEHOLDER: snippet of deploy.yml showing CI/CD stages]</em></p>
+
+      <h2>Security</h2>
+      <ul>
+        <li>IAM roles and S3 bucket policies locked down.</li>
+        <li>No long-lived AWS keys: GitHub OIDC role assumption instead.</li>
+        <li>MFA enforced on all AWS accounts.</li>
+        <li>AWS Vault used locally — no secrets in source control.</li>
+      </ul>
+      <p><em>[TEXT PLACEHOLDER: diagram of OIDC trust GitHub → AWS]</em></p>
+
+      <h2>What I Learned</h2>
+      <ul>
+        <li>How front end and back end integrate in a serverless context.</li>
+        <li>The discipline of Infrastructure as Code with CloudFormation/SAM.</li>
+        <li>How DNS, SSL certificates, and CDNs actually fit together.</li>
+        <li>CI/CD as a confidence layer — tests that prevent bad deploys.</li>
+        <li>Practical experience with serverless (API GW, Lambda, DynamoDB).</li>
+        <li>Why multi-account separation (ENG/TEST/PROD) is a best practice.</li>
+      </ul>
+
+      <h2>Links</h2>
+      <ul>
+        <li><a href="https://cloudresumechallenge.dev" target="_blank" rel="noopener">Cloud Resume Challenge official site</a></li>
+        <li><a href="https://github.com/zReuben" target="_blank" rel="noopener">My GitHub repositories</a></li>
+        <li><a href="https://reubenmulholland.com" target="_blank" rel="noopener">Live site</a></li>
+      </ul>
+    </article>
   </main>
 
-  <footer class="shell footer"><p>&copy; <span id="y"></span> Reuben Mulholland</p></footer>
+  <footer class="container" style="margin:3rem 0 2rem;">
+    <a href="blog.html" class="link-chip">&larr; Back to Blog</a>
+    <small style="display:block;margin-top:1rem;">&copy; <span id="y"></span> Reuben Mulholland</small>
+  </footer>
   <script>document.getElementById('y').textContent=new Date().getFullYear();</script>
 </body>
 </html>
