Refactor nav, refactor CRC blog width.

--- a/resume-site/post-crc.html
+++ b/resume-site/post-crc.html
@@ -40,7 +40,7 @@
   </header>
 
   <main class="shell">
-    <section class="section card prose">
+    <section class="section card">
       <h3 class="kicker">Cloud Resume Challenge</h3>
       <h2>How I built a full-stack, serverless, CI/CD-driven resume site on AWS</h2>
 
