--- a/resume-site/blog.html
+++ b/resume-site/blog.html
@@ -26,7 +26,7 @@
     <nav class="topnav" aria-label="Primary">
       <a href="index.html" class="home-link" title="Home">
         <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn"><path d="M12 3.172 3 10v10a1 1 0 0 0 1 1h5v-6h6v6h5a1 1 0 0 0 1-1V10l-9-6.828zM12 1l11 8v11a3 3 0 0 1-3 3h-7v-6H11v6H4a3 3 0 0 1-3-3V9L12 1z"/></svg>
-        <span>Home</span><em class="pill">API demo</em>
+        <span>Home</span><em class="pill">Live API</em>
       </a>
       <a href="resume.html">
         <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zm1 7h5l-5-5v5zM8 13h8v2H8v-2zm0 4h8v2H8v-2z"/></svg>
