--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -39,7 +39,7 @@
         <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn">
           <path d="M12 3.172 3 10v10a1 1 0 0 0 1 1h5v-6h6v6h5a1 1 0 0 0 1-1V10l-9-6.828zM12 1l11 8v11a3 3 0 0 1-3 3h-7v-6H11v6H4a3 3 0 0 1-3-3V9L12 1z"/>
         </svg>
-        <span>Home</span><em class="pill">API demo</em>
+        <span>Home</span><em class="pill">Live API</em>
       </a>
       <a href="resume.html">
         <!-- Document icon -->
